--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -29,6 +29,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <ImageView
+                    android:id="@+id/ImageViewShowBottomSheetListWorkspace"
                     android:layout_width="40dp"
                     android:layout_height="match_parent"
                     android:src="@drawable/ic_person_pin_14"
@@ -228,5 +229,5 @@
     </androidx.cardview.widget.CardView>
 
     <include layout="@layout/layout_add_list_workspace"/>
-
+    <include layout="@layout/bottom_sheet" />
 </LinearLayout>
