--- a/app/src/main/res/layout/employee_item.xml
+++ b/app/src/main/res/layout/employee_item.xml
@@ -3,20 +3,17 @@
     android:id="@+id/item_workspace"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_marginBottom="10dp"
     >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
-        android:layout_height="65dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        app:cardCornerRadius="10dp"
         >
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.7"
             android:orientation="vertical"
@@ -64,5 +61,5 @@
     </LinearLayout>
     <View
         style="@style/Divider"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="4dp" />
 </LinearLayout>
