--- a/app/src/main/res/layout/activity_summary_for_admin.xml
+++ b/app/src/main/res/layout/activity_summary_for_admin.xml
@@ -14,6 +14,6 @@
         />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewSummaryForAdmin"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
