--- a/app/src/main/res/layout/activity_summary_employee.xml
+++ b/app/src/main/res/layout/activity_summary_employee.xml
@@ -26,6 +26,7 @@
             />
 
         <TextView
+            android:id="@+id/header_summary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -151,7 +152,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0"
-                        android:textColor="@color/green_4"
+                        android:textColor="@android:color/holo_orange_light"
                         android:textSize="18sp"
                         android:layout_gravity="center"
                         android:textStyle="bold"/>
@@ -176,7 +177,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0"
-                        android:textColor="@color/green_4"
+                        android:textColor="@android:color/holo_red_light"
                         android:textSize="18sp"
                         android:layout_gravity="center"
                         android:textStyle="bold"/>
