--- a/app/src/main/res/layout/activity_summary_for_admin.xml
+++ b/app/src/main/res/layout/activity_summary_for_admin.xml
@@ -3,15 +3,36 @@
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical">
-    <ImageView
-        android:id="@+id/btnBackPressed"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_arrow_left_30"
-        android:layout_marginRight="10dp"
-        android:padding="10dp"
-        android:layout_gravity="center_vertical"
-        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:orientation="horizontal"
+        android:background="@color/white"
+        android:layout_marginBottom="10dp"
+        >
+        <ImageView
+
+            android:id="@+id/btnBackPressed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_arrow_left_30"
+            android:layout_marginRight="10dp"
+            android:padding="10dp"
+            android:layout_gravity="center_vertical"
+            />
+
+        <TextView
+            android:id="@+id/header_summary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Tổng kết"
+            android:textColor="@color/black"
+            android:textSize="22sp"
+            android:textStyle="bold"
+
+            />
+    </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewSummaryForAdmin"
         android:layout_width="match_parent"
