--- a/app/src/main/res/layout/summary_employee_item.xml
+++ b/app/src/main/res/layout/summary_employee_item.xml
@@ -56,7 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="0"
-                android:textColor="@color/green_4"
+                android:textColor="@android:color/holo_orange_light"
                 android:textSize="18sp"
                 android:layout_gravity="center"
                 android:textStyle="bold"/>
@@ -81,7 +81,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="0"
-                android:textColor="@color/green_4"
+                android:textColor="@android:color/holo_red_light"
                 android:textSize="18sp"
                 android:layout_gravity="center"
                 android:textStyle="bold"/>
